Extremely minor text formatting optimizations